--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "mongoose": "^4.13.20",
-    "morgan": "~1.9.0"
+    "mongoose": "^5.8.5",
+    "morgan": "~1.9.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
